# LightconeIO

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements-mpi.txt  requirements.txt  setup.py
.github/workflows/: build_and_test.yml  publish.yml  python-app.yml  xray_build_and_test.yml
docs/: requirements.txt
docs/FLAMINGO/: Makefile  lightcone_corrections.tex  references.bib
docs/source/: api.rst  conf.py  halo_lightcones.rst  healpix_maps.rst  index.rst  installation.rst  postprocessing.rst  reading_particles.rst
examples/: full_sky_map_from_particles.py  lightcone_shell_volume.py  make_map_from_particles.py  make_smoothed_map.py  make_smoothed_map.sh  make_smoothed_map_from_particles.py  make_xray_map.py  make_xray_map.sh  pixel_zoom.py  plot_healpix_map.py  plot_pencil_beam.py  read_test.py  smoothed_full_sky_map_from_particles.py  test_smoothing.sh  xray_emission_in_a_pencil_beam.py
lightcone_io/: __init__.py  choose_bh_tracer.py  combine_healpix_maps.py  combine_maps.py  compare_maps.py  correct_maps.py  downsample_maps.py  file_utils.py  halo_catalogue.py  halo_reader.py  healpix_maps.py  index_particles.py  kernel.py  lc_xray_calculator.py  map_reader.py  match_black_holes.py  memory_use.py  particle_halo_ids.py  particle_metadata.py  particle_reader.py  particle_sorter.py  reindex_halos.py  smoothed_map.py  units.py  util.py  utils.py  virtual_particle_file.py  xray_map_all_bands.py  xray_utils.py
scripts/FLAMINGO/: All_Xray_Maps.py  README  choose_tracer.sh  combine_L1000N0900.sh  combine_L1000N1800.sh  combine_L1000N3600.sh  combine_L2800N5040.sh  combine_L5600N5040.sh  correct_L1000N0900.sh  correct_L1000N1800.sh  correct_L1000N1800_ds.sh  correct_L2800N5040.sh  correct_L2800N5040_ds.sh  correct_L5600N5040.sh  downsample_L1000N0900.sh  downsample_L1000N1800.sh  downsample_L1000N3600.sh  downsample_L2800N5040.sh  downsample_L5600N5040.sh  halo_ids_L1000N1800.sh  match_L1000N0900.sh  match_bh_L1000N0900.sh  match_bh_L1000N1800.sh  match_bh_L1000N1800_all.sh  match_bh_L1000N3600.sh  match_bh_L2800N5040.sh  (+20 more)
tests/: conftest.py  hash_particles.py  test_halo_reader.py  test_indexed_dataset_reader.py  test_map_reader.py  test_merge_slices.py  test_particle_reader.py  test_read_slices.py
(+43 files in other folders)
