[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lightcone_io"
dynamic = ["version"]
authors = [
  { name="John Helly", email="j.c.helly@durham.ac.uk" },
]
description = "Module for reading SWIFT lightcone output."
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numpy",
    "unyt>=3.0",
    "healpy",
    "scipy",
    "tqdm",
    "pytest",
    "hdfstream>=0.0.21",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
mpi = ["mpi4py", "virgodc>=1.0.2"]

[project.urls]
Homepage = "https://github.com/jchelly/LightconeIO"
Repository = "https://github.com/jchelly/LightconeIO.git"
Issues = "https://github.com/jchelly/LightconeIO/issues"

[tool.setuptools]
packages = ["lightcone_io",]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"